momo-store-infrastructure/kubernetes/momo-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "std-ext-004-43.k8s.praktikum-services.tech"
  rules:
    - host: "std-ext-004-43.k8s.praktikum-services.tech"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
